syntax = "proto3";
package transaction;
option go_package = "./logic";
import "google/protobuf/timestamp.proto";


// GetTransactions
message TransactionsRequest {}

message TransactionResponse {
    int32 id = 1;
	int32 customer_id = 2;
	int32 product_id = 3;
	int32 price = 4;
	int32 quantity = 5;
    google.protobuf.Timestamp created_at = 6;
}

message TransactionsResponse {
  repeated TransactionResponse transactions = 1;
}



service TransactionService {
  rpc GetTransactions (TransactionsRequest) returns (TransactionsResponse) {}
}